--- a/docs/src/content/docs/introduction/overview.mdx
+++ b/docs/src/content/docs/introduction/overview.mdx
@@ -15,14 +15,14 @@ A modular, production-grade toolkit for codebase mapping, symbol extraction, cod
 ### Install from PyPI
 
 ```bash
-# Basic installation, it's currently `cased-kit` on pypi
-pip install cased-kit
+# Basic installation, it's currently `codekit` on pypi
+pip install codekit
 
 # With OpenAI support
-pip install cased-kit[openai]
+pip install codekit[openai]
 
 # With all features (OpenAI, Anthropic, Google, vector search, API)
-pip install cased-kit[all]
+pip install codekit[all]
 ```
 
 ### Install from Source
