--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -18,7 +18,7 @@ import CardGroup from "../../components/CardGroup.astro";
     kit shines for getting **precise, accurate, and relevant context** to 
     LLMs. Use kit to build code reviewers, code generators and graphs, even full-fledged coding assistants: all enriched with the right code context. 
     
-    MIT-licensed on [GitHub](https://github.com/cased/kit).
+    MIT-licensed on [GitHub](https://github.com/shaneholloman/codekit).
   </div>
 </div>
 
