--- a/docs/src/content/docs/introduction/overview.mdx
+++ b/docs/src/content/docs/introduction/overview.mdx
@@ -8,13 +8,13 @@ A modular, production-grade toolkit for codebase mapping, symbol extraction, cod
 
 `kit` features a "mid-level API" to build your own custom tools, applications, agents, and workflows: easily build code review bots, semantic code search, documentation generators, and more.
 
-`kit` is **free and open source** with a permissive MIT license. Check it out on [GitHub](https://github.com/cased/kit).
+`kit` is **free and open source** with a permissive MIT license. Check it out on [GitHub](https://github.com/shaneholloman/codekit).
 
 ## Installation
 
 ### Install from PyPI
 
-```bash
+```sh
 # Basic installation, it's currently `codekit` on pypi
 pip install codekit
 
@@ -27,8 +27,8 @@ pip install codekit[all]
 
 ### Install from Source
 
-```bash
-git clone https://github.com/cased/kit.git
+```sh
+git clone https://github.com/shaneholloman/codekit.git
 cd kit
 uv venv .venv
 source .venv/bin/activate
