--- a/docs/src/content/docs/introduction/quickstart.mdx
+++ b/docs/src/content/docs/introduction/quickstart.mdx
@@ -2,8 +2,8 @@
 title: Quickstart
 ---
 
-```bash
-git clone https://github.com/cased/kit.git
+```sh
+git clone https://github.com/shaneholloman/codekit.git
 cd kit
 uv venv .venv
 source .venv/bin/activate
@@ -11,7 +11,7 @@ uv pip install -e .
 ```
 
 Now, you can use kit!
-kit ships with a demonstration repository at `tests/fixtures/` you can use to get started. 
+kit ships with a demonstration repository at `tests/fixtures/` you can use to get started.
 
 Try this simple Python script (e.g., save as `test_kit.py` in the `kit` directory you cloned):
 
