--- a/docs/src/content/docs/tutorials/exploring-kit-interactively.mdx
+++ b/docs/src/content/docs/tutorials/exploring-kit-interactively.mdx
@@ -277,7 +277,7 @@ A common task is to list files, select one, and then retrieve its contents. Here
     --- Content of LICENSE (first 300 chars) ---
     MIT License
 
-    Copyright (c) 2024 Cased
+    Copyright (c) 2024 Shane Holloman
 
     Permission is hereby granted, free of charge, to any person obtaining a copy
     of this software and associated documentation files (the "Software"), to deal
@@ -322,7 +322,7 @@ Content of the first chunk (first 50 chars):
 ---
 MIT License
 
-Copyright (c) 2024 Cased
+Copyright (c) 2024 Shane Holloman
 
 Permiss...
 ---
