--- a/docs/src/content/docs/tutorials/integrating_supersonic.mdx
+++ b/docs/src/content/docs/tutorials/integrating_supersonic.mdx
@@ -5,7 +5,7 @@ description: Using kit for code analysis and Supersonic for automated PR creatio
 
 import { Aside } from '@astrojs/starlight/components';
 
-`kit` excels at understanding and analyzing codebases, while [Supersonic](https://github.com/cased/supersonic) provides a high-level Python API specifically designed for programmatically creating GitHub Pull Requests. Combining them allows you to build powerful workflows that analyze code, generate changes, and automatically propose those changes via PRs.
+`kit` excels at understanding and analyzing codebases, while [Supersonic](https://github.com/shaneholloman/supersonic) provides a high-level Python API specifically designed for programmatically creating GitHub Pull Requests. Combining them allows you to build powerful workflows that analyze code, generate changes, and automatically propose those changes via PRs.
 
 <Aside type="note">
   **Use Case**
