--- a/docs/src/content/docs/core-concepts/docstring-indexing.mdx
+++ b/docs/src/content/docs/core-concepts/docstring-indexing.mdx
@@ -16,9 +16,9 @@ syntax or specific variable names.
 
 ## Why use it?
 
-* **Cleaner embeddings** – Comments like *“Summary of retry logic”* embed better than nested `for`-loops.
-* **Smaller index** – One summary per file (or symbol) is < 1 kB, while the file itself might be thousands of tokens.
-* **Provider-agnostic** – Works with any LLM supported by `kit.Summarizer` (OpenAI, Anthropic, Google…).
+* **Cleaner embeddings** - Comments like *“Summary of retry logic”* embed better than nested `for`-loops.
+* **Smaller index** - One summary per file (or symbol) is < 1 kB, while the file itself might be thousands of tokens.
+* **Provider-agnostic** - Works with any LLM supported by `kit.Summarizer` (OpenAI, Anthropic, Google…).
 
 ## How it Works
 
