--- a/docs/src/content/docs/core-concepts/search-approaches.mdx
+++ b/docs/src/content/docs/core-concepts/search-approaches.mdx
@@ -3,7 +3,7 @@ title: Searching
 ---
 
 Not sure **which `kit` feature to reach for**?  Use this page as a mental map of
-search-and-discovery tools – from plain-text grep all the way to LLM-powered
+search-and-discovery tools - from plain-text grep all the way to LLM-powered
 semantic retrieval.
 
 ## Decision table
@@ -25,7 +25,7 @@ semantic retrieval.
 
 ### 1. Plain-text / regex search
 
-Fast, zero-setup, works everywhere. Use when you *know* what string you’re
+Fast, zero-setup, works everywhere. Use when you *know* what string you're
 looking for.
 
 ```python
@@ -35,7 +35,7 @@ repo.search_text("parse_jwt", file_pattern="*.py")
 ### 2. Symbol indexing
 
 `extract_symbols()` uses **tree-sitter** queries (Python, JS, Go, etc.) to list
-functions, classes, variables – handy for nav trees or refactoring tools.
+functions, classes, variables - handy for nav trees or refactoring tools.
 
 ### 3. LLM summarization
 
