--- a/docs/src/content/docs/core-concepts/semantic-search.mdx
+++ b/docs/src/content/docs/core-concepts/semantic-search.mdx
@@ -40,21 +40,21 @@ for hit in results:
 
 `kit` is model-agnostic: pass any function `str -> List[float]`.
 
-* **Local (open-source)** – e.g. [`sentence-transformers`](https://www.sbert.net/) models like `all-MiniLM-L6-v2` (see example above). 100 MB-ish download, fast CPU inference.
-* **Cloud API** – e.g. OpenAI `text-embedding-3-small`. Define:
+* **Local (open-source)** - e.g. [`sentence-transformers`](https://www.sbert.net/) models like `all-MiniLM-L6-v2` (see example above). 100 MB-ish download, fast CPU inference.
+* **Cloud API** - e.g. OpenAI `text-embedding-3-small`. Define:
   ```python
   import openai
   def embed_fn(text: str):
       resp = openai.embeddings.create(model="text-embedding-3-small", input=[text])
       return resp.data[0].embedding
   ```
-* **Batching** – `VectorSearcher` will attempt to call your `embed_fn` with a *list* of texts for efficiency.  If your function only supports single strings it still works (falls back internally).
+* **Batching** - `VectorSearcher` will attempt to call your `embed_fn` with a *list* of texts for efficiency.  If your function only supports single strings it still works (falls back internally).
 
 ### Chunking Strategy
 
 `vs.build_index(chunk_by="symbols")` (default) extracts functions/classes/variables via the existing AST parser.  This is usually what you want.
 
-* `chunk_by="lines"` splits code into ~50-line blocks – useful for languages where symbol extraction isn’t supported yet.
+* `chunk_by="lines"` splits code into ~50-line blocks - useful for languages where symbol extraction isn't supported yet.
 * You can re-index at any time; the previous collection is cleared automatically.
 
 ### Persisting & Re-using an Index
@@ -96,7 +96,7 @@ llm_response = my_llm.chat(prompt + context)
 ### Limitations & Tips
 
 * Indexing a very large monorepo may take minutes: consider running on CI and committing `.kit/vector_db`.
-* Embeddings are language-agnostic – comments & docs influence similarity too.  Clean code/comments improve search.
+* Embeddings are language-agnostic - comments & docs influence similarity too.  Clean code/comments improve search.
 * Exact-keyword search (`repo.search_text()`) can still be faster for quick look-ups; combine both techniques.
 
 <Aside type="note">
