--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -20,7 +20,7 @@ import { Image } from "astro:assets";
     />
   </div>
   <div class="hero-text">
-    Welcome to **kit** – the Python toolkit from [Shane Holloman](https://shaneholloman.dev) for building LLM-powered developer tools and workflows.
+    Welcome to **kit** - the Python toolkit from [Shane Holloman](https://shaneholloman.dev) for building LLM-powered developer tools and workflows.
 
     kit shines for getting **precise, accurate, and relevant context** to
     LLMs. Use kit to build code reviewers, code generators and graphs, even full-fledged coding assistants: all enriched with the right code context.
