--- a/docs/src/content/docs/tutorials/docstring_search.mdx
+++ b/docs/src/content/docs/tutorials/docstring_search.mdx
@@ -2,7 +2,7 @@
 title: Build a Docstring Search Engine
 ---
 
-In this tutorial you’ll build a semantic search tool on top of `kit`
+In this tutorial you'll build a semantic search tool on top of `kit`
 using **docstring-based indexing**.
 
 Why docstrings?  Summaries distill *intent* rather than syntax.  Embedding these
