Update titles for consistency and clarity in documentation

--- a/docs/src/content/docs/core-concepts/docstring-indexing.mdx
+++ b/docs/src/content/docs/core-concepts/docstring-indexing.mdx
@@ -1,5 +1,5 @@
 ---
-title: Docstring-based Vector Indexing
+title: Docstring Vector Indexing
 ---
 import { Steps, Aside } from '@astrojs/starlight/components';
 
