--- a/docs/src/content/docs/tutorials/codebase-qa-bot.mdx
+++ b/docs/src/content/docs/tutorials/codebase-qa-bot.mdx
@@ -1,5 +1,5 @@
 ---
-title: Codebase Q&A Bot with Summaries
+title: Codebase Q&A with Summaries
 ---
 
 import { Steps } from '@astrojs/starlight/components';
