--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: kit documentation
+title: Kit Documentation
 template: doc
 tableOfContents: false
 bodyClass: kit-homepage
@@ -11,52 +11,25 @@ import { Image } from "astro:assets";
 
 {/* Features Section - Full Width Items */}
 
-<div style="display: flex; flex-direction: column; gap: 1rem; margin-top: 1.5rem; margin-bottom: 2rem;">
-  <div style="padding: 1.25rem; border: 1px solid var(--sl-color-gray-5); border-radius: 0.5rem;">
-    <h4 style="margin-top: 0; font-size: 1.1rem;">Map any codebase</h4>
-    <p style="font-size: 0.95rem; color: var(--sl-color-gray-2); margin-bottom: 0;">
-        Welcome to **kit** - the Python toolkit from [Shane Holloman](https://shaneholloman.dev) for building LLM-powered developer tools and workflows.
+## Map any codebase
 
-        kit shines for getting **precise, accurate, and relevant context** to
-        LLMs. Use kit to build code reviewers, code generators and graphs, even full-fledged coding assistants: all enriched with the right code context.
+Welcome to **kit** - the Python toolkit from [Shane Holloman](https://shaneholloman.dev) for building LLM-powered developer tools and workflows. kit shines for getting \*\*precise, accurate, and relevant context\*\* to LLMs. Use kit to build code reviewers, code generators and graphs, even full-fledged coding assistants: all enriched with the right code context. MIT-licensed on \[GitHub\](https://github.com/shaneholloman/codekit).
 
-        MIT-licensed on [GitHub](https://github.com/shaneholloman/codekit).
-    </p>
-  </div>
-  <div style="padding: 1.25rem; border: 1px solid var(--sl-color-gray-5); border-radius: 0.5rem;">
-    <h4 style="margin-top: 0; font-size: 1.1rem;">Map any codebase</h4>
-    <p style="font-size: 0.95rem; color: var(--sl-color-gray-2); margin-bottom: 0;">
-      Get a structured view with file trees, language-aware symbol extraction
-      (powered by tree-sitter), and dependency insights.
-    </p>
-  </div>
-  <div style="padding: 1.25rem; border: 1px solid var(--sl-color-gray-5); border-radius: 0.5rem;">
-    <h4 style="margin-top: 0; font-size: 1.1rem;">
-      Support for multiple search methods
-    </h4>
-    <p style="font-size: 0.95rem; color: var(--sl-color-gray-2); margin-bottom: 0;">
-      Mix and match to optimize for speed, accuracy, and use case. Combine fast
-      text search with semantic vector search to find relevant code snippets
-      instantly.
-    </p>
-  </div>
-  <div style="padding: 1.25rem; border: 1px solid var(--sl-color-gray-5); border-radius: 0.5rem;">
-    <h4 style="margin-top: 0; font-size: 1.1rem;">
-      Fine-grained docstring context
-    </h4>
-    <p style="font-size: 0.95rem; color: var(--sl-color-gray-2); margin-bottom: 0;">
-      Use generated docstrings to find code snippets, answer questions, and
-      improve code generation based on summarized content.
-    </p>
-  </div>
-  <div style="padding: 1.25rem; border: 1px solid var(--sl-color-gray-5); border-radius: 0.5rem;">
-    <h4 style="margin-top: 0; font-size: 1.1rem;">Build AI Workflows</h4>
-    <p style="font-size: 0.95rem; color: var(--sl-color-gray-2); margin-bottom: 0;">
-      Leverage ready-made utilities for code chunking, context retrieval, and
-      interacting with LLMs.
-    </p>
-  </div>
-</div>
+## Map any codebase
+
+Get a structured view with file trees, language-aware symbol extraction (powered by tree-sitter), and dependency insights.
+
+## Support for multiple search methods
+
+Mix and match to optimize for speed, accuracy, and use case. Combine fast text search with semantic vector search to find relevant code snippets instantly.
+
+## Fine-grained docstring context
+
+Use generated docstrings to find code snippets, answer questions, and improve code generation based on summarized content.
+
+## Build AI Workflows
+
+Leverage ready-made utilities for code chunking, context retrieval, and interacting with LLMs.
 
 ## Explore the docs
 
