--- a/docs/src/content/docs/introduction/overview.mdx
+++ b/docs/src/content/docs/introduction/overview.mdx
@@ -8,27 +8,27 @@ A modular, production-grade toolkit for codebase mapping, symbol extraction, cod
 
 `kit` features a "mid-level API" to build your own custom tools, applications, agents, and workflows: easily build code review bots, semantic code search, documentation generators, and more.
 
-`kit` is **free and open source** with a permissive MIT license. Check it out on [GitHub](https://github.com/shaneholloman/codekit).
+`kit` is **free and open source** with a permissive MIT license. Check it out on [GitHub](https://github.com/shaneholloman/codekite).
 
 ## Installation
 
 ### Install from PyPI
 
 ```sh
-# Basic installation, it's currently `codekit` on pypi
-pip install codekit
+# Basic installation, it's currently `codekite` on pypi
+pip install codekite
 
 # With OpenAI support
-pip install codekit[openai]
+pip install codekite[openai]
 
 # With all features (OpenAI, Anthropic, Google, vector search, API)
-pip install codekit[all]
+pip install codekite[all]
 ```
 
 ### Install from Source
 
 ```sh
-git clone https://github.com/shaneholloman/codekit.git
+git clone https://github.com/shaneholloman/codekite.git
 cd kit
 uv venv .venv
 source .venv/bin/activate
