--- a/docs/src/content/docs/tutorials/codebase-qa-bot.mdx
+++ b/docs/src/content/docs/tutorials/codebase-qa-bot.mdx
@@ -16,7 +16,7 @@ This approach is powerful because it combines semantic understanding (from summa
 
 ## Prerequisites
 
-*   You have `kit` installed (`pip install codekit`).
+*   You have `kit` installed (`pip install codekite`).
 *   You have an OpenAI API key set (`export OPENAI_API_KEY=...`).
 *   You have a local Git repository you want to query.
 
