--- a/docs/src/content/docs/core-concepts/code-summarization.mdx
+++ b/docs/src/content/docs/core-concepts/code-summarization.mdx
@@ -14,7 +14,7 @@ To use code summarization, you'll need an LLM provider configured. Currently, Op
 1.  **Install Dependencies:**
     ```sh
     # Ensure you are in your project's virtual environment
-    uv pip install codekit
+    uv pip install codekite
     ```
     The installation includes all dependencies for OpenAI, Anthropic, and Google Cloud's Generative AI models.
 
